--- a/stayle/stayle.css
+++ b/stayle/stayle.css
@@ -1,3 +1,8 @@
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 /* --- ESTILOS GENERALES --- */
 body {
     font-family: 'Segoe UI', sans-serif;
